--- a/index.html
+++ b/index.html
@@ -308,75 +308,26 @@
         function handleDefeat() {
             defeatHandled = true;
 
-            // Блокируем только сенсорную зону внизу экрана
-            touchpad.style.pointerEvents = 'none'; // Отключаем взаимодействие с сенсорной зоной
+            // Останавливаем игровой цикл
+            cancelAnimationFrame(gameLoop);
 
-            // Автоматически производим завершающий залповый выстрел
-            performFinalShot();
+            // Блокируем управление
+            isTouching = false;
+            isTap = false;
 
             // Проигрываем звук поражения
             const defeatSound = document.getElementById('defeatSound');
             defeatSound.currentTime = 0;
             defeatSound.play();
 
-            // Флаг для отслеживания завершения взрывов снарядов
-            let missilesExploded = false;
-
-            // Проверяем, завершились ли все взрывы снарядов
-            function checkMissilesExploded() {
-                if (player.missiles.length === 0) {
-                    missilesExploded = true;
-                    tryTransitionToMenu();
-                }
-            }
-
-            // Проверяем, завершились ли оба события (звук и взрывы)
-            function tryTransitionToMenu() {
-                if (missilesExploded && defeatSound.ended) {
-                    // Восстанавливаем взаимодействие с сенсорной зоной
-                    touchpad.style.pointerEvents = 'auto';
-
-                    updateHighScore();
-                    stopBackgroundMusic();
-                    updateScoreboard();
-                    document.getElementById('scoreModal').style.display = 'flex';
-                    defeatHandled = false; // Сбрасываем флаг для следующей игры
-                }
-            }
-
-            // Отслеживаем завершение звука
+            // Ждем завершения звука и переходим в меню
             defeatSound.onended = () => {
-                tryTransitionToMenu();
+                updateHighScore();
+                stopBackgroundMusic();
+                updateScoreboard();
+                document.getElementById('scoreModal').style.display = 'flex';
+                defeatHandled = false; // Сбрасываем флаг для следующей игры
             };
-
-            // Отслеживаем завершение взрывов снарядов
-            const checkMissilesInterval = setInterval(() => {
-                checkMissilesExploded();
-                if (missilesExploded) {
-                    clearInterval(checkMissilesInterval); // Останавливаем проверку
-                }
-            }, 100); // Проверяем каждые 100 мс
-        }
-
-        function performFinalShot() {
-            // Создаем залп снарядов
-            for (let i = 0; i < missileCount; i++) {
-                const angle = -missileSpreadAngle * (missileCount - 1) / 2 + i * missileSpreadAngle;
-                const speedVariation = baseMissileSpeed * (0.9 + Math.random() * 0.2);
-
-                player.missiles.push({
-                    x: player.x + player.width / 2 - 2.5,
-                    y: player.y,
-                    width: 5,
-                    height: 10,
-                    angle: angle,
-                    speed: speedVariation,
-                    willReachEnd: false, // Снаряды не долетают до конца экрана
-                    explosionY: canvas.height / 2 // Взрываемся на середине экрана
-                });
-            }
-
-            playShootSound(); // Проигрываем звук выстрела
         }
 
         function playInfantryHitSound() {
