--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <ul>
                 <li>Следите за уровнем живучести: не допускайте, чтобы вражеские снаряды попадали в вас. Помните, танки и РСЗО наносят больше урона, чем пехота противника.</li>
                 <li>Собирайте очки: за каждые 100 очков вы восстанавливаете 1% здоровья, что поможет вам продержаться дольше.</li>
-                <li>Следите за сложностью: с каждым уровнем враги становятся быстрее, так что будьте готовы к более интенсивным атакам.</li>
+                <li>Следите за сложностью: с каждым уровнем враги становятся быстрее, так что будьте готовы к более интенсивным атаках.</li>
             </ul>
         </div>
     </div>
@@ -304,30 +304,35 @@
         ];
 
         let defeatHandled = false;
+        let isGameOver = false;
 
         function handleDefeat() {
-            defeatHandled = true;
+            isGameOver = true; // Блокируем управление
 
-            // Останавливаем игровой цикл
-            cancelAnimationFrame(gameLoop);
-
-            // Блокируем управление
-            isTouching = false;
-            isTap = false;
-
-            // Проигрываем звук поражения
+            // Воспроизведение звука поражения
             const defeatSound = document.getElementById('defeatSound');
             defeatSound.currentTime = 0;
             defeatSound.play();
 
-            // Ждем завершения звука и переходим в меню
-            defeatSound.onended = () => {
+            // Заключительный залповый выстрел
+            setTimeout(() => {
+                shoot(); // Производим залповый выстрел
+            }, 1000); // Задержка перед выстрелом (1 секунда)
+
+            // Ожидание завершения анимации взрывов
+            setTimeout(() => {
+                // Очистка снарядов и врагов
+                player.missiles = [];
+                enemies.length = 0;
+                enemyMissiles.length = 0;
+
+                // Переход в меню
                 updateHighScore();
                 stopBackgroundMusic();
                 updateScoreboard();
                 document.getElementById('scoreModal').style.display = 'flex';
-                defeatHandled = false; // Сбрасываем флаг для следующей игры
-            };
+                isGameOver = false; // Сбрасываем флаг завершения игры
+            }, 5000); // Задержка перед переходом в меню (5 секунд)
         }
 
         function playInfantryHitSound() {
@@ -350,6 +355,7 @@
         let isTap = false;
 
         touchpad.addEventListener('touchstart', (e) => {
+            if (isGameOver) return; // Блокируем управление, если игра завершена
             isTouching = true;
             const touchpadRect = touchpad.getBoundingClientRect();
             touchStartX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
@@ -358,8 +364,7 @@
         });
 
         touchpad.addEventListener('touchmove', (e) => {
-            if (!isTouching) return;
-
+            if (isGameOver || !isTouching) return; // Блокируем управление, если игра завершена
             const touchpadRect = touchpad.getBoundingClientRect();
             const touchCurrentX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
             const deltaX = touchCurrentX - touchStartX;
@@ -373,6 +378,7 @@
         });
 
         touchpad.addEventListener('touchend', () => {
+            if (isGameOver) return; // Блокируем управление, если игра завершена
             if (isTap) {
                 shoot();
             }
@@ -852,7 +858,7 @@
         function gameLoop() {
             if (gameOver || player.health <= 0) {
                 if (!defeatHandled) {
-                    handleDefeat();
+                    handleDefeat(); // Запускаем процесс завершения игры
                 }
                 return;
             }
